--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "build:finance": "VITE_VARIANT=finance tsc && VITE_VARIANT=finance vite build",
     "build:happy": "VITE_VARIANT=happy tsc && VITE_VARIANT=happy vite build",
     "typecheck": "tsc --noEmit",
+    "typecheck:api": "tsc --noEmit -p tsconfig.api.json",
+    "typecheck:all": "tsc --noEmit && tsc --noEmit -p tsconfig.api.json",
     "tauri": "tauri",
     "preview": "vite preview",
     "test:e2e:full": "VITE_VARIANT=full playwright test",
